Code smells reduced